[gd_scene load_steps=3 format=3 uid="uid://sttdeqtsu8d5"]

[ext_resource type="Script" path="res://source/scenes/menus/settings/setting.gd" id="1"]
[ext_resource type="Theme" uid="uid://pco4t4ktxbc7" path="res://assets/themes/settings.tres" id="2"]

[node name="setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HBoxContainer"]
offset_left = 514.0
offset_top = 306.0
offset_right = 638.0
offset_bottom = 341.0
size_flags_horizontal = 6
theme = ExtResource("2")
text = "Setting Name"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
visible = false
size_flags_horizontal = 6
theme = ExtResource("2")

[node name="OptionButton" type="OptionButton" parent="HBoxContainer"]
visible = false
size_flags_horizontal = 6
size_flags_vertical = 4
theme = ExtResource("2")

[node name="HSlider" type="HSlider" parent="HBoxContainer"]
visible = false
size_flags_horizontal = 7
size_flags_vertical = 4
theme = ExtResource("2")

[connection signal="toggled" from="HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="HBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
